Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2023/03/28:
- TestEngine: Added ItemExists() helper.

2023/03/14:
- TestEngine: Fixed GatherItems() max-depth test being off-by-1 (regression in 2023/03/06 update).

2023/03/06:
- TestEngine: Made GatherItems() calls find items in child windows.
- TestEngine: Do not attempt Open/Close/Check/Uncheck actions on Disabled items.

2023/02/23:
- TestEngine: Fixed ItemDragAndDrop() to latch references in order to avoid breaking when
  using "//$FOCUSED" in references, because focus is changed during the call.

2023/02/10:
- TestEngine: renamed 'ImGuiTestFlags_NoWarmUp' to 'ImGuiTestFlags_NoGuiWarmUp' (rarely used).

2023/02/09:
- TestEngine: Alter visibility checks to reduce unnecessary scrolling when items
  are mostly visible. Bias toward reducing amount of horizontal scroll.
- TestEngine: Allow for extra frames when necessary to validates hovering.
  e.g. blocking popups may be closed by external logic.

2023/02/03
- TestEngine: Update/fixes for Tables-related changes in main lib.

2023/01/20:
- TestEngine: Added a `ImGuiTestContext* ctx` parameter to the optional "pre-run" constructor
  declared in ImGuiTest::SetVarsDataType<>:
     before:   test->SetVarsDataType<MyVars>([](MyVars& vars) { ... })
     after:    test->SetVarsDataType<MyVars>([](ImGuiTestContext* ctx, MyVars& vars) { ... })
  This feature is useful to share GuiFunc/TestFunc accross multiple tests while needing
  specific state initialized before the first run of GuiFunc. It is convenient because
  the custom initialization code can be specified while registering the test.
  (vs. t is also possible to set `test->ArgVariant` and run initialization code in the
  first-frame of the GuiFunc, but this seems the init code is located in a same location).

2023/01/10